# kobi

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: Package.yml  Release.yml
android/: gradle.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/opensource/kobi/: MainActivity.kt
android/app/src/main/res/values/: styles.xml
android/app/src/main/res/values-night/: styles.xml
android/app/src/profile/: AndroidManifest.xml
ci/: Cargo.toml  version.info.txt
ci/src/: common.rs
ci/src/check_asset/: main.rs
ci/src/check_release/: main.rs
ci/src/upload_asset/: main.rs
integration_test/: simple_test.dart
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: commons.dart  cross.dart  ffi.io.dart  main.dart
lib/configs/: api_host.dart  app_orientation.dart  app_theme.dart  cache_time.dart  chapter_order_newest.dart  collect_ordering.dart  comic_grid_columns.dart  comic_pager_type.dart  configs.dart  list_volume.dart  login.dart  map_config.dart  no_pager_animation.dart  proxy.dart  reader_controller_type.dart  reader_direction.dart  reader_slider_position.dart  reader_type.dart  versions.dart
lib/screens/: about_screen.dart  app_screen.dart  author_comics_screen.dart  author_search_screen.dart  books_screen.dart  browser_comics_account_screen.dart  collected_comics_account_screen.dart  comic_download_screen.dart  comic_info_screen.dart  comic_reader_screen.dart  comic_search_screen.dart  discovery_screen.dart  download_comic_info_screen.dart  downloads_screen.dart  histories_screen.dart  init_screen.dart  local_collect_screen.dart  login_screen.dart  rank_screen.dart  recommends_screen.dart  settings_screen.dart  update_screen.dart  user_screen.dart
lib/screens/components/: android_version.dart  comic_card.dart  comic_list.dart  comic_pager.dart  comment_list.dart  commnet_card.dart  commons.dart  content_error.dart  content_loading.dart  download_comic_card.dart  expandable_text.dart  fade_image_widget.dart  file_photo_view_screen.dart  flutter_search_bar_base.dart  image_cache_provider.dart  images.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  udto.dart
lib/src/rust/api/: api.dart
lib/src/rust/copy_client/: client.dart  dtos.dart
linux/: CMakeLists.txt  my_application.cc
linux/appimage/: AppRun.desktop
linux/flutter/: generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: .gitignore  Cargo.toml
native/native.xcodeproj/: project.pbxproj
native/native.xcodeproj/xcuserdata/niuhuan.xcuserdatad/xcschemes/: xcschememanagement.plist
native/native.xcodeproj/xcuserdata/vdinh.xcuserdatad/xcschemes/: xcschememanagement.plist
native/src/: api.rs  downloading.rs  exports.rs  lib.rs  udto.rs  utils.rs
native/src/copy_client/: client.rs  dtos.rs  mod.rs  tests.rs  types.rs
native/src/database/: mod.rs
native/src/database/active/: comic_view_log.rs  local_bookmark.rs  local_collect.rs  mod.rs
native/src/database/cache/: image_cache.rs  web_cache.rs
native/src/database/download/: download_comic.rs  download_comic_chapter.rs  download_comic_group.rs  download_comic_page.rs  mod.rs
native/src/database/properties/: property.rs
native_tests/: Cargo.toml
native_tests/src/: main.rs  tests.rs
rust/: Cargo.toml
rust/src/: exports.rs  frb_generated.rs  lib.rs  udto.rs  utils.rs
rust/src/api/: api.rs  mod.rs
rust/src/copy_client/: client.rs  dtos.rs  lib.rs  mod.rs  tests.rs
rust/src/database/active/: comic_view_log.rs
rust/src/database/cache/: image_cache.rs  web_cache.rs
rust/src/database/download/: download_comic.rs  download_comic_group.rs  mod.rs
rust/src/database/properties/: header.rs  mod.rs  property.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_kobi.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_kobi.podspec
rust_builder/windows/: CMakeLists.txt
test/: image_uri_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
