[package]
name = "ci"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "check-release"
path = "src/check_release/main.rs"

[[bin]]
name = "check-asset"
path = "src/check_asset/main.rs"

[[bin]]
name = "upload-asset"
path = "src/upload_asset/main.rs"

[dependencies]
anyhow = "1.0.86"
reqwest = { version = "0.12.4", features = ["json"] }
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
