[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
anyhow = "1.0.75"
async_once = "0.2.6"
base64 = "0.21.5"
bytes = "1.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
flutter_rust_bridge = { path = "../../flutter_rust_bridge/frb_rust" }
futures-util = "0.3.29"
hex = "0.4.3"
image = { version = "0.24.7", features = ["jpeg", "gif", "webp", "bmp", "png", "jpeg_rayon"] }
itertools = "0.11.0"
lazy_static = "1.4.0"
libc = "0.2.149"
md5 = "0.7.0"
num-iter = "0.1.43"
once_cell = "1.18.0"
prost = "0.12.1"
prost-types = "0.12.1"
regex = "1.10.2"
rsa = "0.7.2"
rust-crypto = "0.2.36"
serde = "1.0.190"
serde_derive = "1.0.190"
serde_json = "1.0.108"
serde_path_to_error = "0.1.14"
tokio = { version = "1.33.0", features = ["full"] }
reqwest = { version = "0.11.22", features = ["tokio-rustls", "rustls", "rustls-tls", "socks", "tokio-socks"], default-features = false }
sea-orm = { version = "0.12.4", features = ["sqlx-sqlite", "macros", "runtime-tokio-rustls"], default-features = false }
linked-hash-map = { version = "0.5.6", features = ["serde", "serde_impl"] }
url = "2.4.1"
tracing-subscriber = "0.3.17"
tracing = "0.1.40"
