[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
anyhow = "1.0"
async_once = "0.2"
base64 = "0.21"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
flutter_rust_bridge = { path = "../../flutter_rust_bridge/frb_rust" }
futures-util = "0.3"
hex = "0.4"
image = { version = "0.24", features = ["jpeg", "gif", "webp", "bmp", "png", "jpeg_rayon"] }
itertools = "0.12"
lazy_static = "1.4"
libc = "0.2"
md5 = "0.7"
num-iter = "0.1"
once_cell = "1.19"
prost = "0.12"
prost-types = "0.12"
regex = "1.10"
rsa = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_path_to_error = "0.1"
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["tokio-rustls", "rustls", "rustls-tls", "socks", "tokio-socks"], default-features = false }
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "macros", "runtime-tokio-rustls"], default-features = false }
linked-hash-map = { version = "0.5", features = ["serde", "serde_impl"] }
url = "2.5"
tracing-subscriber = "0.3"
tracing = "0.1"
rand = "0.8"
async_zip = { version = "0.0.16", features = ["full", "tokio-util", "tokio", "tokio-fs", "async-compression"] }
