[package]
name = "rust_lib_kobi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.9.0"
anyhow = "1.0.81"
async_once = "0.2.6"
base64 = "0.22.0"
bytes = "1.6.0"
chrono = { version = "0.4.37", features = ["serde"] }
futures-util = "0.3.30"
hex = "0.4.3"
image = { version = "0.25.1", features = ["jpeg", "gif", "webp", "bmp", "png"] }
itertools = "0.12.1"
lazy_static = "1.4.0"
libc = "0.2.153"
md5 = "0.7.0"
num-iter = "0.1.44"
once_cell = "1.19.0"
prost = "0.12.3"
prost-types = "0.12.3"
regex = "1.10.4"
rsa = "0.9.6"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.115"
serde_path_to_error = "0.1.16"
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.2", features = ["rustls-tls", "socks", "json"], default-features = false }
linked-hash-map = { version = "0.5.6", features = ["serde", "serde_impl"] }
url = "2.5.0"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
async_zip = { version = "0.0.16", features = ["full", "tokio-util", "tokio", "tokio-fs", "async-compression"] }
async-trait = "0.1.79"
rand = "0.9.1"
sea-orm = { version = "1.1.13", features = ["sqlx-sqlite", "macros", "runtime-tokio-rustls"], default-features = false }
sea-orm-migration = { version = "1.1.13", default-features = false, features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
